crates/math-core/tests/snapshots/wiki_test__wiki000.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\alpha"
---
<math>
    <mi>α</mi>
</math>
