crates/math-core/tests/snapshots/wiki_test__wiki004.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\# \\$ \\% \\wedge \\& \\_ \\{ \\} \\sim \\backslash"
---
<math>
    <mi>#</mi>
    <mi>$</mi>
    <mi>%</mi>
    <mo>∧</mo>
    <mo>&amp;</mo>
    <mi>_</mi>
    <mo stretchy="false">{</mo>
    <mo stretchy="false">}</mo>
    <mo>∼</mo>
    <mo>\</mo>
</math>
