crates/math-core/tests/snapshots/wiki_test__wiki007.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\check{a}, \\breve{a}, \\tilde{a}, \\bar{a}"
---
<math>
    <mover accent="true">
        <mi>a</mi>
        <mo stretchy="false">̌</mo>
    </mover>
    <mo>,</mo>
    <mover accent="true">
        <mi>a</mi>
        <mo stretchy="true">̆</mo>
    </mover>
    <mo>,</mo>
    <mover accent="true">
        <mi>a</mi>
        <mo stretchy="true">̃</mo>
    </mover>
    <mo>,</mo>
    <mover accent="true">
        <mi>a</mi>
        <mo stretchy="false">_</mo>
    </mover>
</math>
