crates/math-core/tests/snapshots/wiki_test__wiki010.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\exp_a b = a^b, \\exp b = e^b, 10^m"
---
<math>
    <msub>
        <mo lspace="0" rspace="0.1667em">exp</mo>
        <mi>a</mi>
    </msub>
    <mi>b</mi>
    <mo>=</mo>
    <msup>
        <mi>a</mi>
        <mi>b</mi>
    </msup>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">exp</mo>
    <mi>b</mi>
    <mo>=</mo>
    <msup>
        <mi>e</mi>
        <mi>b</mi>
    </msup>
    <mo>,</mo>
    <msup>
        <mn>10</mn>
        <mi>m</mi>
    </msup>
</math>
