crates/math-core/tests/snapshots/wiki_test__wiki012.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\sin a, \\cos b, \\tan c, \\cot d, \\sec e, \\csc f"
---
<math>
    <mo lspace="0" rspace="0.1667em">sin</mo>
    <mi>a</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">cos</mo>
    <mi>b</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">tan</mo>
    <mi>c</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">cot</mo>
    <mi>d</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">sec</mo>
    <mi>e</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">csc</mo>
    <mi>f</mi>
</math>
